// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content View Caption should render template with title 1`] = `
<div>
  <div
    test-template="true"
  >
    TEST_TITLE
  </div>
</div>
`;

exports[`Content View Caption should render title 1`] = `
<div>
  <span
    class="dx-cardview-field-name"
  >
    TEST_TITLE
    :
  </span>
</div>
`;
